--- a/model_v1.ipynb
+++ b/model_v1.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transforms = Compose([Rescale(256), RandomCrop(IMAGE_SIZE), ToTensor()])\n",
+    "transforms = Compose([Rescale(256), RandomCrop(IMAGE_SIZE), ToTensor(), Normalize()])\n",
     "\n",
     "train_repeat_dataset = RepeatImageDataset('./flickr8k/images/train/', transform=transforms)\n",
     "train_random_dataset = RandomCaptionDataset('./flickr8k/images/train/', transform=transforms)"
@@ -70,39 +70,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[[0.3001, 0.3394, 0.1218,  ..., 0.5300, 0.4467, 0.4237],\n",
-       "          [0.3563, 0.5572, 0.2906,  ..., 0.1595, 0.1078, 0.1156],\n",
-       "          [0.4119, 0.6038, 0.2315,  ..., 0.1693, 0.2155, 0.1227],\n",
+       "tensor([[[[-0.1457, -0.2434, -0.2860,  ..., -1.6554, -0.8509, -0.3689],\n",
+       "          [-0.1634, -0.1988, -0.2531,  ..., -1.6453, -2.0156, -1.8454],\n",
+       "          [-0.1589, -0.1513, -0.2910,  ..., -0.5445, -0.0285, -1.9745],\n",
        "          ...,\n",
-       "          [0.3216, 0.0864, 0.1305,  ..., 0.1257, 0.1305, 0.1331],\n",
-       "          [0.5192, 0.0628, 0.0767,  ..., 0.0713, 0.0581, 0.0590],\n",
-       "          [0.2118, 0.0631, 0.0618,  ..., 0.1037, 0.1267, 0.2224]],\n",
+       "          [-1.9259, -2.0229, -2.0571,  ..., -0.1126,  0.4675, -1.2379],\n",
+       "          [-1.8919, -1.9941, -2.0218,  ...,  0.4873, -0.3833, -1.4834],\n",
+       "          [-1.9452, -2.0307, -2.0272,  ..., -0.5644, -1.8123, -1.4203]],\n",
        "\n",
-       "         [[0.2874, 0.2998, 0.1138,  ..., 0.5834, 0.4115, 0.3902],\n",
-       "          [0.3603, 0.5125, 0.2800,  ..., 0.1868, 0.1723, 0.1322],\n",
-       "          [0.3821, 0.5239, 0.2523,  ..., 0.2341, 0.2368, 0.1680],\n",
+       "         [[ 0.0995,  0.0669, -0.0481,  ..., -1.0403, -0.1754, -0.2705],\n",
+       "          [ 0.1018,  0.0872, -0.0275,  ..., -1.4650, -1.7818, -1.6167],\n",
+       "          [ 0.1131,  0.1071, -0.0432,  ..., -0.5462, -0.7868, -1.9538],\n",
        "          ...,\n",
-       "          [0.4719, 0.0370, 0.0904,  ..., 0.1049, 0.0763, 0.0841],\n",
-       "          [0.6379, 0.0890, 0.0509,  ..., 0.0794, 0.0614, 0.0678],\n",
-       "          [0.2560, 0.0490, 0.0575,  ..., 0.0678, 0.1212, 0.1889]],\n",
+       "          [-1.8571, -1.9124, -1.9438,  ..., -0.2663, -0.3753, -1.2945],\n",
+       "          [-1.8540, -1.9446, -1.9432,  ...,  0.0872, -1.2088, -1.6308],\n",
+       "          [-1.8610, -1.9466, -1.9336,  ..., -1.5683, -1.6659, -1.3400]],\n",
        "\n",
-       "         [[0.2510, 0.2600, 0.1221,  ..., 0.5579, 0.3617, 0.2730],\n",
-       "          [0.3363, 0.4564, 0.2899,  ..., 0.0463, 0.0929, 0.0680],\n",
-       "          [0.3506, 0.4818, 0.2495,  ..., 0.1153, 0.1379, 0.0768],\n",
+       "         [[-0.0488, -0.1192, -0.0272,  ..., -1.6421, -1.0877, -0.5378],\n",
+       "          [-0.0382, -0.0795, -0.0280,  ..., -1.4212, -1.6345, -1.6994],\n",
+       "          [-0.0049, -0.0332, -0.0571,  ..., -1.1351, -0.4376, -1.7368],\n",
        "          ...,\n",
-       "          [0.0814, 0.0331, 0.0384,  ..., 0.0269, 0.0457, 0.0367],\n",
-       "          [0.1358, 0.0350, 0.0233,  ..., 0.0428, 0.0343, 0.0347],\n",
-       "          [0.0322, 0.0248, 0.0097,  ..., 0.0354, 0.0586, 0.1271]]]],\n",
+       "          [-1.6785, -1.7587, -1.7816,  ..., -1.1889, -1.0583, -1.5641],\n",
+       "          [-1.7282, -1.7590, -1.7646,  ..., -0.7951, -1.3335, -1.6833],\n",
+       "          [-1.7420, -1.7334, -1.7831,  ..., -1.4086, -1.7192, -1.5308]]]],\n",
        "       device='cuda:0')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,9 +270,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hidden_size' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-30a38fccd71d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mhideen_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLSTMCaptioning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mnum_epoch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hidden_size' is not defined"
+     ]
+    }
+   ],
    "source": [
     "input_size = (3, 224, 224)\n",
     "hideen_size = ...\n",
