--- a/model_v1_repeat.ipynb
+++ b/model_v1_repeat.ipynb
@@ -282,7 +282,7 @@
     "        loss = loss_function(probs, target)\n",
     "        \n",
     "        # Forward pass for t>=0: n - 1 first words of the sentence\n",
-    "        for j, word in enumerate(caption[:, :-1]):\n",
+    "        for j, word in enumerate(caption[:, :-1][0]):\n",
     "\n",
     "            \n",
     "            # Get index of the word in embedding matrix\n",
